--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,25 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-
     <link rel="manifest" href="./manifest.json" />
     <script defer="defer" src="./static/js/main.11811f21.js"></script>
     <link href="./static/css/main.d0180cc1.css" rel="stylesheet" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Delivery App</title>
     <script type="text/javascript">
       !(function (n) {
@@ -42,7 +32,9 @@
       })(window.location);
     </script>
     <script defer="defer" src="./static/js/main.11811f21.js"></script>
-    <link href="./css/main.d0180cc1.css" rel="stylesheet" />
+    <link href="./static/css/main.d0180cc1.css" rel="stylesheet" />
+    <script defer="defer" src="./static/js/main.872c6f90.js"></script>
+    <link href="./static/css/main.d0180cc1.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
